<resources>
    <string name="app_name">Flickr Gallery</string>
    <string name="hint_search">Tags, Keywords</string>
    <string name="search">Search</string>
    <string name="more">More Info</string>
    <string name="title">Title </string>
    <string name="author">Author </string>
    <string name="date_post">Date Taken </string>
    <string name="date_published">Published Date</string>
    <string name="tags">Tags </string>
    <string name="meta_data">Image Data</string>
</resources>
