<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_weight="4.5"
            android:text="@string/app_name"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_share"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:layout_marginRight="5dp"
            android:src="@drawable/share" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/feed_description"
        android:layout_below="@+id/heading">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/feed_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/title"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/feed_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/author"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/feed_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/date_post"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/feed_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/date_published"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/feed_publishdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/head_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/tags"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/feed_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black" />
            <TextView
                android:id="@+id/head_imageInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/meta_data"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/image_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/black"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/feed_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="2dp"
        android:background="@drawable/btn_selector"
        android:text="@string/more"
        android:textColor="@color/white" />
</RelativeLayout>